<resources>
    <string name="app_name">SmsApplication</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sms">Sms</string>
    <string name="yuborilganlar">Yuborilganlar</string>
    <string name="arxiv">Arxiv</string>
    <string name="sozlash">Sozlash</string>
    <string name="ip_address">Ip Address</string>
    <string name="add_ip_address">Add IP Address</string>
    <string name="avtoomatik_ishlash">Avtoomatik ishlash</string>
    <string name="sms_limt">Sms Limt</string>
    <string name="yangi_smslar">Yangi Smslar</string>
    <string name="smslarni_jo_natish">Smslarni jo`natish</string>
    <string name="serverni_yangilash">Serverni yangilash</string>
    <string name="arxivni_tozalash">Arxivni Tozalash</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="telefon_raqam">Telefon Raqam</string>
    <string name="_998">+998</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="kirish">kirish</string>
    <string name="yangi_ip_manzil">yangi IP manzil</string>
    <string name="add_status">add status</string>
    <string name="ip_manzil">IP Manzil</string>
    <string name="_0_ta_sms">0 ta sms</string>
    <string name="avto_sms_jo_natish">Avto SMS Jo\'natish</string>
    <string name="phone_number">Phone Number</string>
    <string name="yuborilga_xabar">Yuborilgan Xabar</string>
    <string name="xabarlar">Xabarlar</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="tarix">Tarix</string>
    <string name="smslar_mavjud_emas">SMSlar mavjud emas</string>
    <string name="jo_natilgan_smslar">Jo`natilgan SMSlar</string>
    <string name="send_sms">Send SMS</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="yuborilgan_smslarni_tozalash">Yuborilgan smslarni tozalash</string>
</resources>